gulp task added css changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <body>
         <div class="playa-container">
             <div class="playa-controlls-cont">
+                <div class="play-list-wrap">
+                    <ul class="play-list">
+                        <li class="list-item">Track one</li>
+                        <li class="list-item">Track two</li>
+                        <li class="list-item">Track three</li>
+                        <li class="list-item">Track three</li>
+                        <li class="list-item">Track five</li>
+                    </ul>
+                </div>
                 <div class="btn-audio-controls btn-stop"></div>
                 <div class="btn-audio-controls btn-prev"></div>
                 <div class="btn-audio-controls btn-play"></div>
