styles update, toggle playlist

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
                         </ol>
                     </div>
                 </div>
-                <div class="btn-audio-controls btn-stop"></div>
-                <div class="btn-audio-controls btn-prev"></div>
-                <div class="btn-audio-controls btn-play"></div>
-                <div class="btn-audio-controls btn-next"></div>
+                <div class="btn-pl-list"></div>
+                <div class="audio-controlls-wrapper">
+                    <div class="btn-audio-controls btn-stop"></div>
+                    <div class="btn-audio-controls btn-prev"></div>
+                    <div class="btn-audio-controls btn-play"></div>
+                    <div class="btn-audio-controls btn-next"></div>
+                </div>
+
                 <div class="volume-wrap">
                     <div class="btn-volume"></div>
                     <div class='clickable'>
@@ -33,19 +37,42 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
+
         <div class="playa-container1">
             <div class="playa-controlls-cont">
-                <div class="btn-audio-controls btn-stop"></div>
-                <div class="btn-audio-controls btn-prev"></div>
-                <div class="btn-audio-controls btn-play"></div>
-                <div class="btn-audio-controls btn-next"></div>
-                <div class='clickable'>
-                    <div class='display'>
-                        <div class="progress"></div>
+                <div class="play-list-container">
+                    <div class="play-list-wrap">
+                        <ol class="play-list">
+                            <li class="list-item"><span>Track one</span></li>
+                            <li class="list-item"><span>Track two</span></li>
+                            <li class="list-item"><span>Track three</span></li>
+                            <li class="list-item"><span>Track four</span></li>
+                            <li class="list-item"><span>Track five</span></li>
+                            <li class="list-item"><span>Track six</span></li>
+                            <li class="list-item"><span>Track seven</span></li>
+                        </ol>
                     </div>
                 </div>
+                <div class="btn-pl-list"></div>
+                <div class="audio-controlls-wrapper">
+                    <div class="btn-audio-controls btn-stop"></div>
+                    <div class="btn-audio-controls btn-prev"></div>
+                    <div class="btn-audio-controls btn-play"></div>
+                    <div class="btn-audio-controls btn-next"></div>
+                </div>
+
+                <div class="volume-wrap">
+                    <div class="btn-volume"></div>
+                    <div class='clickable'>
+                        <div class='display'>
+                            <div class="progress"></div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
