some controlls attacched

--- a/index.html
+++ b/index.html
@@ -11,48 +11,14 @@
                 <div class="play-list-container">
                     <div class="play-list-wrap">
                         <ol class="play-list">
-                            <li class="list-item"><span>Track one</span></li>
-                            <li class="list-item"><span>Track two</span></li>
-                            <li class="list-item"><span>Track three</span></li>
-                            <li class="list-item"><span>Track four</span></li>
-                            <li class="list-item"><span>Track five</span></li>
-                            <li class="list-item"><span>Track six</span></li>
-                            <li class="list-item"><span>Track seven</span></li>
-                        </ol>
-                    </div>
-                </div>
-                <div class="btn-pl-list"></div>
-                <div class="audio-controlls-wrapper">
-                    <div class="btn-audio-controls btn-stop"></div>
-                    <div class="btn-audio-controls btn-prev"></div>
-                    <div class="btn-audio-controls btn-play"></div>
-                    <div class="btn-audio-controls btn-next"></div>
-                </div>
-
-                <div class="volume-wrap">
-                    <div class="btn-volume"></div>
-                    <div class='clickable'>
-                        <div class='display'>
-                            <div class="progress"></div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="playa-container1">
-            <div class="playa-controlls-cont">
-                <div class="play-list-container">
-                    <div class="play-list-wrap">
-                        <ol class="play-list">
-                            <li class="list-item"><span>Track one</span></li>
-                            <li class="list-item"><span>Track two</span></li>
-                            <li class="list-item"><span>Track three</span></li>
-                            <li class="list-item"><span>Track four</span></li>
-                            <li class="list-item"><span>Track five</span></li>
-                            <li class="list-item"><span>Track six</span></li>
-                            <li class="list-item"><span>Track seven</span></li>
+                            <li class="list-item" data-track="Alex Band - Only One .mp3"><span>Track one</span></li>
+                            <li class="list-item" data-track="001-deus-ex-intro.mp3"><span>Track two</span></li>
+                            <li class="list-item" data-track="002-title-deus-ex.mp3"><span>Track three</span></li>
+                            <li class="list-item" data-track="004-credits-the-illuminati.mp3"><span>Track four</span></li>
+                            <li class="list-item" data-track="008-area-51-part-1-.mp3"><span>Track five</span></li>
+                            <li class="list-item" data-track="013-area-51-bunker-begin-the-end-part-2-.mp3"><span>Track six</span></li>
+                            <li class="list-item" data-track="018-battery-park-part-3-.mp3"><span>Track seven</span></li>
+                            <li class="list-item" data-track="020-hong-kong-club-1.mp3"><span>Track eight</span></li>
                         </ol>
                     </div>
                 </div>
@@ -79,7 +45,6 @@
         <script src="app.js"></script>
         <script>
             var x = new Playa({pContainerClassName :'playa-container'});
-            var y = new Playa({pContainerClassName :'playa-container1'});
         </script>
     </body>
 
