--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
                 <div class="volume-wrap">
                     <div class="btn-volume"></div>
-                    <div class='clickable'>
-                        <div class='display'>
-                            <div class="progress"></div>
+                    <div class="vlm-progress-bar-wrap">
+                        <div class="vlm-progress-bar-container">
+                            <div class="vlm-progress-bar"></div>
                         </div>
                     </div>
                 </div>
